frontend/google-books-api-app/src/App.css
.App {
  font-family: roboto;
  margin-top: 20px;
  padding: 0px;
  background-color: #F9FAFB;
}

.search-container {
  background-color: white;
}

h1 {
  text-align: center;
  margin-bottom: 5px;
  font-family: Verdana;
  font-size: 33px;
  font-weight: bold;
}

#search-box {
  width: 400px;
  height: 40px;
  padding: 0 0 0 10px;
}

#search-button {
  margin: 10px 0 10px 0;
  width: 400px;
  font-size: 25px;
  padding: 0px;
}

.search-container {
  text-align: center;
}

#total-results-display {
  font-size: 25px;
  font-weight: bold;
  margin-bottom: 10px;
}

#dropdown-container {
  margin: auto;
  width: 400px;
}

#results-per-page-dropdown {
  color: white;
  font-size: 25px;
}

.card-container {
  text-align: center;
  margin-top: 10px;
}

.card {
  width: 300px;
  height: 440px;
  display: inline-block;
  background-color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 -1px 4px 0 rgba(25, 32, 36, 0.04),
  0 3px 6px 0 rgba(25, 32, 36, 0.16);
  margin: 10px;
  overflow: hidden;
  font-size: 20px;
  padding: 15px;
  color: black;
}

.card:hover {
  background-color: #51D2F2;
  color: white;
}

#book-authors, #book-date,
#book-description {
  font-size: 15px;
}

#book-image {
  height: 200px;
  width: 140px;
}

#book-title {
  margin-top: 10px;
  max-height: 60px;
  overflow: hidden;
  font-weight: bold;
}

#book-authors {
  max-height: 60px;
  overflow: hidden;
}

#book-description {
  margin-top: 10px;
  text-align: left;
  height: 70px;
  overflow: hidden;
  color: black;
  font-family: serif;
}

#page-buttons {
  text-align: center;
}

#previous-page, #next-page {
  width: 190px;
  margin: 10px;
  font-size: 25px;
  padding: 0px;
}

#current-page-display {
  text-align: center;
  font-size: 25px;
  font-weight: bold;
}

#first-last-page {
  text-align: center;
  margin-bottom: 10px;
}

#first-page, #last-page {
  width: 190px;
  margin: 10px;
  font-size: 25px;
  padding: 0px;
}

footer {
  text-align: center;
  margin-bottom: 20px;
  font-family: Verdana;
  font-weight: bold;
}

